@@ -34,10 +34,11 @@
             </div>
             <div class="row">
                 <div class="sub col-md-9 col-12">
-                    <h2 class="tagline">Wherever Life Takes You — Stay Connected</h2>                </div>
+                    <h2 class="tagline">Wherever Life Takes You — Stay Connected</h2>                
+                </div>
             </div>
             <div class="row">
-                <a href="" class="button col-md-3 col-10">Learn More</a>
+                <a href="/residential" class="button col-md-3 col-10">Learn More</a>
                 <a href="http://shop.ekhocomm.com/" class="button col-md-3 col-10">Shop Now</a>
             </div>
         </div>
